compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_imported_function.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 919
expression: "\nimport module\n\npub fn a() {\n  module.a\n}\n"
---

warning: Deprecated value used
  ┌─ /src/warning/wrn.gleam:5:9
  │
5 │   module.a
  │         ^^ This value has been deprecated

It was deprecated with this message: Don't use this!

