compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_imported_unqualified_constant.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\nimport module.{a}\n\npub fn b() {\n  a\n}\n"
---
----- SOURCE CODE
-- module.gleam
@deprecated("Don't use this!") pub const a = Nil

-- main.gleam

import module.{a}

pub fn b() {
  a
}


----- WARNING
warning: Deprecated value used
  ┌─ /src/warning/wrn.gleam:5:3
  │
5 │   a
  │   ^ This value has been deprecated

It was deprecated with this message: Don't use this!
