compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_imported_unqualified_function.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 955
expression: "\nimport module.{a}\n\npub fn b() {\n  a\n}\n"
---

warning: Deprecated value used
  ┌─ /src/warning/wrn.gleam:5:3
  │
5 │   a
  │   ^ This value has been deprecated

It was deprecated with this message: Don't use this!

