compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__deprecated_list_spread_variable_pattern_syntax.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  let letters = [\"b\", \"c\"]\n  case letters {\n    [] -> []\n    [..x] -> x\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let letters = ["b", "c"]
  case letters {
    [] -> []
    [..x] -> x
  }
}


----- WARNING
warning: Deprecated list pattern matching syntax
  ┌─ test/path:6:5
  │
6 │     [..x] -> x
  │     ^^^^^ Replace this with `x`

This syntax for pattern matching on lists is deprecated.
This spread matches the entire list, so the variable x can be used as the
pattern directly instead.
